# output.openapi.json
@@ -398,6 +398,35 @@
         ]
       }
     },
+    "/api/user/carBikeList": {
+      "get": {
+        "tags": [
+          "Sell"
+        ],
+        "summary": " Get car bike array list Api",
+        "responses": {
+          "200": {
+            "description": "Successful Operation"
+          },
+          "400": {
+            "description": "Bad request - Invalid input, validation error"
+          },
+          "401": {
+            "description": "Unauthorized - Authentication failure"
+          },
+          "500": {
+            "description": "Internal server error - Something went wrong on the server side"
+          }
+        },
+        "security": [
+          {
+            "access_token": [
+              "access_token"
+            ]
+          }
+        ]
+      }
+    },
     "/api/user/addVehicle": {
       "post": {
         "tags": [
